<resources>
    <string name="app_name">Tourishare</string>

    <!--cadenas basicas -->
    <string name="entrar">Entrar</string>
    <string name="registrarse">Registrarse</string>
    <string name="aceptar">Aceptar</string>
    <string name="acercade">Acerca de </string>
    <string name="usuario">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="tunombre">Tu nombre</string>
    <string name="tupass">Tu contraseña</string>
    <string name="tuciudad">Tu ciudad</string>
    <string name="tufoto">Tu foto</string>
    <string name="turango">Tu rango</string>
    <string name="hintuser">Introduce usuario...</string>
    <string name="hintpass">Introduce pass...</string>
    <string name="hintciudad">Introduce ciudad...</string>
    <string name="salir">Salir</string>
    <string name="nombre">NOMBRE</string>
    <string name="editar">Editar</string>
    <string name="seguir">Seguir</string>
    <string name="dejarseguir">No seguir</string>
    <string name="borrarciudad">Eliminar ciudad</string>
    <string name="borrarsubcat">Eliminar</string>
    <string name="ciudad">Ciudad</string>
    <string name="rango">Rango</string>
    <string name="error">Error</string>
    <string name="cancelar">Cancelar</string>
    <string name="introduzcaadmin">Introduzca pass admin ...</string>
    <string name="colaboradores">Colaboradores</string>
    <string name="introduzcapass">Nueva contraseña...</string>

    <!--cadenas del menu lateral -->
    <string name="nombrenav">NOMBRE DEL USUARIO</string>
    <string name="ciudadnav">Ciudad del usuario</string>
    <string name="opmiperfil">Mi perfil</string>
    <string name="opciudades">Mis ciudades</string>
    <string name="opamigos">Amigos</string>
    <string name="opmensajes">Mensajes</string>
    <string name="oplogout">Cerrar sesión</string>
    <string name="opcancion">Activar canción</string>
    <string name="opcancionoff">Parar canción</string>

    <!--cadenas del menu principal -->
    <string name="mnueva">Nueva ciudad</string>
    <string name="mactu">Refrescar</string>
    <string name="mpref">Preferencias</string>
    <string name="mhoteles">Ir a KAYAK</string>
    <string name="mvuelos">Ir a Momondo</string>

    <!--cadenas de Mi perfil -->
    <string name="mipass">Cambiar contraseña</string>
    <string name="miconfirmar">Confirmar cambios</string>
    <string name="miborrar">Borrar cuenta</string>
    <string name="misalir">Salir</string>
    <string name="novato">Novato</string>

    <!--cadenas de lista de ciudades favoritas, de amigos y subcategorias -->
    <string name="titulolistacfav">TUS CIUDADES</string>
    <string name="titulolistaamigos">TUS AMIGOS</string>
    <string name="titulolistasubcat">SUBCATEGORIA</string>

    <!-- cadenas de apartado de mensajes -->
    <string name="titulobandejaentrada">BANDEJA DE ENTRADA</string>
    <string name="emisorbandejaentrada">Emisor: </string>
    <string name="asuntobandejaentrada">Asunto: </string>
    <string name="asunto">Asunto</string>
    <string name="cuerpomensaje">Cuerpo</string>
    <string name="emisorejbandeja">Nombre emisor...</string>
    <string name="asuntoejbandeja">Asunto del mensaje...</string>
    <string name="cuerpoejbandeja">Cuerpo del mensaje...</string>
    <string name="botonborrarbandejaentrada">Eliminar mensaje</string>
    <string name="botonenviarbandejaentrada">Enviar mensaje</string>
    <string name="botonrespondermensajes">Responder mensaje</string>

    <!--cadenas de Preferencias -->
    <string name="prefGrupo">PREFERENCIAS DE SERVIDOR</string>
    <string name="tituloprefip">IP del servidor</string>

    <!--cadenas editar ciudad o subcategoria -->
    <string name="ednombre">Nombre</string>
    <string name="eddescripcion">Descripcion</string>
    <string name="edsituacionmapa">Situacion en el mapa</string>
    <string name="edpuntuacion">Puntuacion</string>
    <string name="edhintnombre">Escriba nombre...</string>
    <string name="edhintdescripcion">Escriba descripcion...</string>
    <string name="edrestaurantes">Restaurantes</string>
    <string name="edmonumentos">Monumentos</string>
    <string name="edmuseos">Museos</string>
    <string name="edtransporte">Transporte</string>
    <string name="edlugaresinteres">Lugares de interes</string>
    <string name="edciudadsearchmapa">Búsqueda de Google</string>

    <!--titulos y textos de dialogs -->
    <string name="titulodiagsignup">Faltan datos</string>
    <string name="textodiagsignup">Seleccione una foto y escriba un nombre y contraseña</string>
    <string name="titulodiagusercreado">Usuario creado</string>
    <string name="textodiagusercreado">Su usuario se ha creado. Se abrirá la ventana de Login.</string>
    <string name="useryaexiste">El nombre de usuario ya existe. Introduzca un nombre diferente.</string>
    <string name="titulodiaguserexiste">El usuario ya existe</string>
    <string name="titulodiagEntrar">Nombre o contraseña incorrectos</string>
    <string name="textodiagEntrar">El nombre o la contraseña son incorrectos.</string>
    <string name="textoacercade"> TOURISHARE. Versión 1.0.
        \n2017
        \nEsta aplicación es un proyecto final de Grado Superior en Desarrollo de Aplicaciones Multiplataforma,
        que pretende crear una red de contactos que compartan información útil de ciudades. Es una aplicación turística.
        \nNo se permite su venta o distribución.
    \nLa aplicación guarda los datos en un servidor basado en Apache (XAMPP).
    \nLos datos introducidos en el servidor no serán publicados.
    \nProgramación, diseño de interfaces y localización: Elena Cuéllar </string>
    <string name="tituloidsubcatultima">No se encontró ID</string>
    <string name="textoidsubcatultima">No se encontró el último ID de Subcategorias</string>
    <string name="textodiaginsertsubcat">Seleccione una foto y escriba un nombre</string>
    <string name="titulodiagsubcatcreada">Subcategoria añadida</string>
    <string name="textodiagsubcatcreada">Se ha creado la subcategoria</string>
    <string name="tituloidciudadsubcats">Error al actualizar</string>
    <string name="textoidciudadsubcats">Error al actualizar los datos de las subcategorías de esta ciudad</string>
    <string name="tituloproblemaactulistaprincipal">Problema al actualizar</string>
    <string name="textoproblemaactulistaprincipal">Problema al actualizar la lista.</string>
    <string name="titulodatosiniciales">Fallo con los datos iniciales</string>
    <string name="textodatosiniciales">Fallo al descargar los datos iniciales.</string>
    <string name="titulociudadagregada">Ciudad agregada</string>
    <string name="textociudadagregada">La nueva ciudad se ha agregado a la lista.</string>
    <string name="titulopassincorrecta">Contraseña incorrecta</string>
    <string name="textopassincorrecta">Contraseña de administrador incorrecta</string>
    <string name="tituloborrarciudad">Borrar ciudad</string>
    <string name="textoborrarciudad">¿Está seguro de que quiere eliminar esta ciudad?</string>
    <string name="registroborrado">Registro eliminado</string>
    <string name="tituloborrarsubcat">Borrar subcategoría</string>
    <string name="textoborrarsubcat">¿Está seguro de que quiere eliminar esta subcategoría?</string>
    <string name="textoeditarsubcaterroractu">Error al actualizar la subcategoría</string>
    <string name="tituloenviarmensaje">Mensaje enviado</string>
    <string name="textoenviarmensaje">El mensaje se ha enviado correctamente.</string>
    <string name="titulononombre">Sin nombre</string>
    <string name="textononombre">El nombre de usuario no debe estar vacío</string>
    <string name="tituloerroractuperfil">Error al actualizar</string>
    <string name="textoerroractuperfil">Error al actualizar el perfil</string>
    <string name="tituloborrarperfil">Borrar perfil</string>
    <string name="textoborrarperfil">¿Está seguro de que quiere borrar su usuario?</string>
    <string name="titulocambiarpass">Cambiar contraseña</string>
    <string name="titulocambiopassexito">Contraseña modificada</string>
    <string name="textocambiopassexito">La contraseña ha sido actualizada con éxito</string>
    <string name="tituloborrarmensaje">Borrar mensaje</string>
    <string name="textoborrarmensaje">¿Está seguro de que quiere borrar el mensaje?</string>
    <string name="titulomensajeborrado">Mensaje borrado</string>
    <string name="textomensajeborrado">El mensaje se ha borrado correctamente.</string>
    <string name="titulocerrarsesion">Cerrar sesión</string>
    <string name="textocerrarsesion">¿Está seguro de que quiere cerrar sesión?</string>
    <string name="errorcargarfoto">No se pudo cargar la foto.</string>
    <string name="tituloerrorcargarfoto">Error con la foto</string>

    <!--Login-->
    <string name="espereLogin">Entrando en la app. Espere, por favor ...</string>
    <string name="espereAddSubcat">Insertando subcategoria. Espere, por favor ...</string>
    <string name="espereAddCiudad">Insertando ciudad. Espere, por favor ...</string>
    <string name="esperellenarlistaprincipal">Actualizando la lista. Espere, por favor ...</string>
    <string name="esperebajarfotos">Descargando datos iniciales. Espere, por favor ...</string>
    <string name="espereactualizandociudad">Actualizando ciudad. Espere, por favor ...</string>
    <string name="esperemostrarciudad">Mostrando ciudad. Espere, por favor ...</string>
    <string name="esperemostrarsubcat">Mostrando subcategoría. Espere, por favor ...</string>
    <string name="espereactualizandosubcat">Actualizando subcategoría. Espere, por favor ...</string>
    <string name="esperemostrarusuario">Mostrando datos de usuario. Espere, por favor ...</string>
    <string name="espereenviarmensaje">Enviando mensaje. Espere, por favor ...</string>
    <string name="esperemostrarperfil">Mostrando tu perfil. Espere, por favor ...</string>
    <string name="espereactualizandoperfil">Actualizando perfil. Espere, por favor ...</string>
    <string name="esperebandejaentrada">Cargando mensajes. Espere, por favor ...</string>
    <string name="espereleermensaje">Mostrando mensaje. Espere, por favor ...</string>

    <!--otras -->
    <string name="espereNuevoUser">Insertando registro y subiendo foto. Espere, por favor...</string>
    <string name="navOpen">Abrir Navigation Drawer </string>
    <string name="navClos">Cerrar Navigation Drawer </string>
    <string name="notifTituloMsg">Nuevos mensajes</string>
    <string name="notiftextoMsg">Tiene nuevos mensajes</string>
    <string name="notiftituloCiudad">Nuevas ciudades</string>
    <string name="notiftextoCiudad">Nuevas ciudades en la lista</string>

</resources>
