<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/itemPerfil"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/opmiperfil" />
        <item
            android:id="@+id/itemCiudades"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/opciudades" />
        <item
            android:id="@+id/itemamigos"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/opamigos" />
        <item
            android:id="@+id/itemMensajes"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/opmensajes" />
        <item
            android:id="@+id/itemCancion"
            android:icon="@android:drawable/stat_sys_headset"
            android:title="@string/opcancion" />
        <item
            android:id="@+id/itemlogout"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:title="@string/oplogout" />
    </group>

</menu>