<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/coloritembandejaentrada"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/coloritembandejaentrada"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textoFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"
                android:text="@string/emisorbandejaentrada"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@id/textoFrom"
                android:text="@string/emisorejbandeja"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textoSubject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textoFrom"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"
                android:text="@string/asuntobandejaentrada"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txSubject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textoFrom"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@id/textoSubject"
                android:text="@string/asuntoejbandeja"
                android:textSize="18sp" />
        </RelativeLayout>

        <EditText
            android:id="@+id/txBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:focusable="false"
            android:text="@string/cuerpoejbandeja"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/bEnvMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colortitulobandejaentrada"
            android:text="@string/botonrespondermensajes" />

        <Button
            android:id="@+id/bDeleteMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colortitulobandejaentrada"
            android:text="@string/botonborrarbandejaentrada" />

        <Button
            android:id="@+id/bExitMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colortitulobandejaentrada"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/salir" />
    </LinearLayout>
</ScrollView>