<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/coloritembandejaentrada"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/coloritembandejaentrada"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textoSubjectenv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:text="@string/asuntobandejaentrada"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txSubjectenv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@id/textoSubjectenv"
                android:hint="@string/asuntoejbandeja"
                android:textSize="18sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textoBodyenv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:text="@string/cuerpomensaje"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txBodyenv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/cuerpoejbandeja"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/bEnviarMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/colortitulobandejaentrada"
            android:text="@string/botonenviarbandejaentrada" />

        <Button
            android:id="@+id/bExitMsgenv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colortitulobandejaentrada"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/salir" />
    </LinearLayout>
</ScrollView>