<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorFondo">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="85dp"
                android:layout_marginRight="85dp"
                android:layout_marginTop="15dp"
                android:text="@string/tufoto"
                android:textColor="@color/colorBlanco"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/tufoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/textView4"
                android:layout_marginTop="15dp"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="85dp"
                android:layout_marginRight="85dp"
                android:layout_marginTop="100dp"
                android:text="@string/tunombre"
                android:textColor="@color/colorBlanco"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtuUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="85dp"
                android:layout_marginRight="85dp"
                android:textColor="@color/colorBlanco"
                android:textStyle="bold"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/hintuser"
                android:layout_below="@id/textView"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtuUser"
                android:layout_marginLeft="85dp"
                android:layout_marginRight="85dp"
                android:layout_marginTop="35dp"
                android:text="@string/tupass"
                android:textColor="@color/colorBlanco"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtupass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView2"
                android:layout_marginLeft="85dp"
                android:layout_marginRight="85dp"
                android:ems="10"
                android:hint="@string/hintpass"
                android:inputType="textPassword"
                android:textColor="@color/colorBlanco"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtupass"
                android:layout_marginLeft="85dp"
                android:layout_marginRight="85dp"
                android:layout_marginTop="35dp"
                android:text="@string/tuciudad"
                android:textColor="@color/colorBlanco"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtuciudad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="85dp"
                android:layout_marginRight="85dp"
                android:textColor="@color/colorBlanco"
                android:textStyle="bold"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/hintciudad"
                android:layout_below="@id/textView3"/>

            <Button
                android:id="@+id/bSignup"
                android:layout_width="194dp"
                android:layout_height="48dp"
                android:layout_marginLeft="85dp"
                android:layout_marginRight="85dp"
                android:layout_marginTop="25dp"
                android:background="@color/colorBoton"
                android:text="@string/aceptar"
                android:textColor="@color/colorBlanco"
                android:textStyle="bold"
                android:layout_below="@id/txtuciudad"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>